Polish Google Drive modal
